--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="resume">
 
         <div class="profile">
-            <img src="Profile.jpg" alt="Profile Photo">
+            <img src="./Profile.jpg" alt="Profile Photo">
         </div>
 
         <h1 class="name">SRIDHAR KUMAR</h1>
@@ -170,3 +170,4 @@
 
 </body>
 </html>
+
